--- a/directive/nav-bar/nav-bar.less
+++ b/directive/nav-bar/nav-bar.less
@@ -1,68 +1,31 @@
 #NavBar {
     position: static;
+    width: 100vw;
     .box(center);
-    @media screen and (min-width: 768px) {
-        nav.navbar-nav {
-            float: inherit;
-            text-align: center;
-            display: -webkit-inline-box;
-        }
-    }
-    @media screen and (max-width: 300px) {
-        #table-list { width: 100vw; }
-    }
-    .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .active > a {
-        background: @blue !important;
-        -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-        -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-        box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
-        color: #fff !important;
+    >.menu-tab {
+        border: none;
+        height: 50px;
+        width: 25vw;
+        color: #fff;
+        opacity: .7;
         font-weight: 900;
+        background-image: -webkit-linear-gradient(bottom, #444, #222 23px);;
+        background-image: -o-linear-gradient(bottom, #444, #222 23px);;
+        background-image: -moz-linear-gradient(bottom, #444, #222 23px);;
+        background-image: gradient(bottom, #444, #222 23px);;
+        &.active,
+        &:hover,
+        &:focus {
+            opacity: 1;
+        }
+        &.active {
+            background: @blue;
+            border-bottom: 1px solid @lime_green;
+            -webkit-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+            -o-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+            -moz-box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
+            box-shadow: inset 4px 4px 20px 4px rgba(0,0,0,0.49) !important;
 
-    }
-    .navbar-default .navbar-nav > li > a:hover {
-        color: #fff !important;
-    }
-    nav.navbar {
-        height: 30px;
-        background:none;
-        border:none;
-        z-index:9;
-
-        >div.navbar-header {
-            text-align: -webkit-center;
-            >.navbar-toggle {
-                position: relative;
-                float: inherit;
-                padding: 9px 10px;
-                margin-top: 8px;
-                margin-right: 15px;
-                margin-bottom: 8px;
-                background-color: transparent;
-                background-image: none;
-                border: 1px solid transparent;
-                border-radius: 4px;
-            }
         }
     }
-
-    div.navbar-collapse.collapse {
-    	display: block;
-    	overflow: hidden;
-    	max-height: 0px;
-    	-webkit-transition: max-height .15s ease-in-out;
-    	-moz-transition: max-height .15s ease-in-out;
-    	-o-transition: max-height .15s ease-in-out;
-    	transition: max-height .15s ease-in-out;
-        >.nav > li {
-            position: relative;
-            display: -webkit-inline-box;
-        }
-
-    }
-    div.navbar-collapse.collapse.in {
-        max-height: 100vh;
-        background-color: rgba(32,32,32,.85);
-    }
-
 }
